<resources>
    <string name="app_name">RealLifeRPG</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="n">Name</string>
    <string name="view_profile">View Profile</string>
    <string name="toggle_sound">Toggle Sound:</string>
    <string name="char_class">Class:</string>
    <string name="athlete">Athlete</string>
    <string name="athleteStats">HP:12 Stamina:7 Intel:0 Strength:5 Agility:4 Luck:2</string>
    <string name="programmer">Programmer</string>
    <string name="programmerStats">HP:10 Stamina:6 Intel:6 Strength:3 Agility:3 Luck:2</string>
    <string name="couchpotato">Couch Potato</string>
    <string name="couchpotatoStats">HP:20 Stamina:5 Intel:2 Strength:2 Agility:1 Luck:0</string>
    <string name="engineer">Engineer</string>
    <string name="engineerStats">HP:12 Stamina:6 Intel:6 Strength:1 Agility:2 Luck:3</string>
    <string name="nurse">Nurse</string>
    <string name="nurseStats">HP:13 Stamina:4 Intel:4 Strength:1 Agility:2 Luck:6</string>
    <string name="create_char_btn">Create Character</string>
</resources>
